--- a/doggove main/first.html
+++ b/doggove main/first.html
@@ -15,7 +15,6 @@
 
 </head>
 <body>
-
   </div>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
@@ -35,18 +34,18 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="http://127.0.0.1:5500/MY_DOG.html">MY DOG</a>
+            <a class="nav-link" href="../MY_DOG/MY_DOG.html">MY DOG</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               DOG STORE
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">DOG FOOD</a></li>
+              <li><a class="dropdown-item" href="../dog_store/dog_food.html">DOG FOOD</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">DOG ACCESSORIES</a></li>
+              <li><a class="dropdown-item" href="../dog_store/dog_accessories.html">DOG ACCESSORIES</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">DOG ESSENTIALS</a></li>
+              <li><a class="dropdown-item" href="../dog_store/dog_essential.html">DOG ESSENTIALS</a></li>
             </ul>
           </li>
         </ul>
@@ -63,7 +62,7 @@
   <div class="main-content">
     <div class="container">
       <div class="welcome-content">
-    <h1 style="text-align: center;">WELCOME TO THE WORLD OF DOGLOVERS
+    <h1 style="text-align: center;" id="welcome-line">WELCOME TO THE WORLD OF DOGLOVERS
     </h1>
     <p style="text-align: center;"><img src="R.png" height="70px" width="80%"></p>
       </div>
@@ -220,6 +219,8 @@
     </div>
   </div>
 </div>  
+
+
 <footer>
   <div class="container">
     <div class="row">
